media and other edits
